--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,11 +28,16 @@ body {
 input {
   padding : 2px 2px 2px 2px;
   border : rgb(203 213 225) solid 1px;
-  border-radius: 8px;
+  border-radius: 4px;
   width : 100%;
   height : 100%;
+  background : rgb(241 245 249);
 }
 
+input:focus {
+  outline :rgb(148 163 184) solid 1px;
+  border : rgb(148 163 184) solid 1px;
+}
 
 table {
   border-collapse: separate;
