--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,12 @@ body {
   }
 }
 
+select {
+  border : solid 1px rgb(203 213 225);
+  padding : 2px 2px 2px 2px;
+  border-radius: 4px;
+}
+
 input {
   padding : 2px 2px 2px 2px;
   border : rgb(203 213 225) solid 1px;
@@ -32,6 +38,11 @@ input {
   width : 100%;
   height : 100%;
   background : rgb(241 245 249);
+}
+
+input[type="radio"]:focus{
+  outline : none;
+  border : none;
 }
 
 input:focus {
@@ -48,6 +59,7 @@ th,
 td {
   text-align : center;
   padding : 8px 8px;
+  font-size : 14px;
 }
 th {
   background: #42444e;
